# ChangeLog for dev-db/cdb
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/cdb/ChangeLog,v 1.34 2007/03/26 07:48:10 antarus Exp $

  26 Mar 2007; Alec Warner <antarus@gentoo.org> cdb-0.75.ebuild,
  cdb-0.75-r1.ebuild, cdb-0.75-r2.ebuild:
  Remove dependency on portage: ref bug 162516

  12 Mar 2007; Raúl Porcel <armin76@gentoo.org> cdb-0.75-r1.ebuild:
  x86 stable

*cdb-0.75-r2 (09 Dec 2006)

  09 Dec 2006; Timothy Redaelli <drizzt@gentoo.org> +cdb-0.75-r2.ebuild:
  Revision bump: Remove redundant deps, make it respect LDFLAGS and add
  ~x86-fbsd keyword

  22 Nov 2006; Charlie Shepherd <masterdriverz@gentoo.org> ChangeLog:
  Add blocker with dev-db/freecdb, thanks to Tuan Van for reporting, bug 115594

  16 Sep 2006; Tobias Scherbaum <dertobi123@gentoo.org> cdb-0.75-r1.ebuild:
  ppc stable

  25 Jun 2006; Marcus D. Hanwell <cryos@gentoo.org> cdb-0.75-r1.ebuild:
  Marked stable on amd64, bug 132702.

  14 May 2006; Jason Wever <weeve@gentoo.org> cdb-0.75-r1.ebuild:
  Stable on SPARC wrt bug #132702.

  20 Feb 2006; Markus Rothe <corsair@gentoo.org> cdb-0.75-r1.ebuild:
  Stable on ppc64

  04 Feb 2006; Aron Griffis <agriffis@gentoo.org> cdb-0.75-r1.ebuild:
  Mark 0.75-r1 stable on alpha

  03 Feb 2006; Aron Griffis <agriffis@gentoo.org> cdb-0.75-r1.ebuild:
  Mark 0.75-r1 stable on ia64

  26 Jan 2006; Jeroen Roovers <jer@gentoo.org> cdb-0.75-r1.ebuild:
  Marked hppa (bug #119461).

  23 Jan 2006; Rene Nussbaumer <killerfox@gentoo.org> cdb-0.75-r1.ebuild:
  Unstable on hppa. See bug #115716.

  21 Jan 2006; Jason Wever <weeve@gentoo.org> cdb-0.75.ebuild:
  Stable on SPARC wrt bug #119443.

  18 Jan 2006; Markus Rothe <corsair@gentoo.org> cdb-0.75.ebuild:
  Stable on ppc64; bug #119443

*cdb-0.75-r1 (15 Dec 2005)

  15 Dec 2005; Seemant Kulleen <seemant@gentoo.org> +metadata.xml,
  +cdb-0.75-r1.ebuild:
  add more .a and .h files for langthang
