@@ -1,3 +1,0 @@
-MD5 81fed54d0bde51b147dd6c20cdb92d51 cdb-0.75.tar.gz 54162
-RMD160 d52288ee6df58fdc5a79efc16693cd5e305f9c65 cdb-0.75.tar.gz 54162
-SHA256 1919577799a50c080a8a05a1cbfa5fa7e7abc823d8d7df2eeb181e624b7952c5 cdb-0.75.tar.gz 54162
