@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/cdb
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/cdb/ChangeLog,v 1.34 2007/03/26 07:48:10 antarus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/cdb/ChangeLog,v 1.35 2007/04/24 17:30:05 chtekk Exp $
+
+  24 Apr 2007; Luca Longinotti <chtekk@gentoo.org> metadata.xml,
+  -cdb-0.75.ebuild, cdb-0.75-r1.ebuild, cdb-0.75-r2.ebuild:
+  Remove old versions, cleanup ebuilds, take over maintainership.
 
   26 Mar 2007; Alec Warner <antarus@gentoo.org> cdb-0.75.ebuild,
   cdb-0.75-r1.ebuild, cdb-0.75-r2.ebuild:
